--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Training</title>
 </head>
 <body>
-    <h1>Git Training 
-        
+    <h1 id="heading">Git Training by Jonathan
     </h1>
 </body>
 </html>
